--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
             <a href=""><img class="logo"  src="assets/logo.JPG" alt="logo gestoría"></a>
                 <div class="menuNavegacion">
                     <a class="menuLink" href="">Inicio</a>
-                <div class=listaServicios>
-                    <a class="menuLink" href="">Servicios</a>
-                    <ul class="menuLinkServiciosDropdown">
-                        <li><a href="">Cambio de propietario</a></li>
-                        <li><a href=""></a>Dotación de placas</li>
-                        <li><a href=""></a>Validaciones</li>
-                        <li><a href=""></a>Bajas totales</li>
-                        <li><a href=""></a>Descuentos en infracciones</li>
-                    </ul>
+                    <a class="menuLink" href="">Nosotros</a>
+                    <div class=listaServicios>
+                        <a class="menuLink" href="">Servicios</a>
+                        <ul class="menuLinkServiciosDropdown">
+                            <li><a href="" class="listaServiciosMenu">Cambio de propietario</a></li>
+                            <li><a href="" class="listaServiciosMenu">Dotación de placas</a></li>
+                            <li><a href="" class="listaServiciosMenu">Validaciones</a></li>
+                            <li><a href="" class="listaServiciosMenu">Bajas totales</a></li>
+                            <li><a href="" class="listaServiciosMenu">Descuentos en infracciones</a></li>
+                        </ul>
                 </div>
                 <a class="menuLink" href="">Contacto</a>
-                <a class="menuLink" href="">Nosotros</a>
-           | </div>
+            </div>
             </nav>
     </header>
     <main></main>
