añade hero y titulo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
             </div>
             </nav>
     </header>
-    <main></main>
+    <main>
+        <div class="heroContainer">
+            <div class="heroInfo">
+                <h1 class="heroTitulo">SANTOS GESTORÍA</h1>
+                <h2 class="heroSubtitulo">Tramites vehiculares</h2>
+            </div>
+        </div>
+    </main>
     <footer></footer>
     <script src="app.js" defer></script>
 </body>
