añade seccion sobre empresa en lp

--- a/index.html
+++ b/index.html
@@ -94,18 +94,35 @@
               <section class="infoDescuento">
                   <div class="contenidoInfoDescuento">  
                     <div class="gifBoton">
-                      <img src="assets/gifprueba-unscreen.gif" class="gifPrueba">
+                      <img src="assets/gif2.gif" class="gifPrueba">
                       <a><button class="botonWhats">
                         <img src="assets/whatsAppIcono.png" alt="WhatsApp" class="iconWhats">
                         <span>Escríbenos por chat</span>
                       </button></a>
                     </div>
                     <div class="textoDescuento">
+                      <hr class="divisionHeroDescuento">
                       <h2 class="tituloDescuento">Descuentos en Infracciones Estatales</h2>
-                      <p class="infoTextoDescuento">No pagues de más en tus infracciones estatales. <strong class="enhancedYellow"> Con nuestros descuentos,</strong> el trámite es rápido y sencillo. 
+                      <p class="infoTextoDescuento">No pagues de más en tus infracciones estatales. <strong class="enhancedYellow"> Con nuestros descuentos,</strong> el trámite es rápido y sencillo. </p>
                       <p class="infoTextoDescuento" id="centrarTextoDescuento"><strong>¡Contáctanos y ahorra hoy!</strong></p>
                     </div>
                   </div>
+              </section>
+
+              <section class="sobreEmpresaLp">
+                <img src="assets/pruebaSobreEmpresa.jpg" class="imagenTrabajando">
+                <div class="contenidoSobreEmpresaLp">
+                  <hr class="divisionSobreEmpresa">
+                  <h2 class="tituloSobreEmpresa">Santos Gestoría</h2>
+                  <p class="infoTextoSobreEmpresa">Somos una empresa especializada en servicios integrales de gestoría vehicular, comprometidos con brindar asesoría confiable, eficaz y personalizada. Nuestro equipo altamente capacitado trabaja con profesionalidad, responsabilidad y liderazgo.</p>
+                  <p class="infoTextoSobreEmpresa">Nos comprometemos en facilitar cada trámite vehicular, optimizando tiempos y reduciendo costos para nuestros clientes. Buscamos ser la mejor opción, ofreciendo soluciones que se adapten perfectamente a tus necesidades, con atención cercana y resultados garantizados.</p>
+                  <blockquote>
+                    <div class="quote-divider">
+                    <p class="infoTextoSobreEmpresa"><strong>Porque con Santos Gestoría, ¡Todo es posible!</strong></p>
+                    </div>
+                  </blockquote>
+                 <a href=""><button class="botonLeerMas"><span>Leer más</span></button></a>
+                </div>
               </section>
             
     </main>
