--- a/index.html
+++ b/index.html
@@ -124,6 +124,36 @@
                  <a href=""><button class="botonLeerMas"><span>Leer más</span></button></a>
                 </div>
               </section>
+
+              <section>
+                <div class="divisorSecciones">
+                  <!--<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0b71c3" fill-opacity="1" d="M0,64L48,69.3C96,75,192,85,288,96C384,107,480,117,576,106.7C672,96,768,64,864,64C960,64,1056,96,1152,101.3C1248,107,1344,85,1392,74.7L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>-->
+                  <svg class="separador" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0b71c3" fill-opacity="1" d="M0,224L48,208C96,192,192,160,288,165.3C384,171,480,213,576,234.7C672,256,768,256,864,250.7C960,245,1056,235,1152,213.3C1248,192,1344,160,1392,144L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+                  <h2 class="tituloDescuento" id="tituloServicios">Nuestros servicios</h2>
+                </div>
+                <div class="serviciosContenedor">
+                  <ul class="serviciosLista">
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                    <li class="servicios">
+                      <h2>Blabla</h2>
+                    </li>
+                  </ul>
+                </div>
+              </section>
             
     </main>
     <footer></footer>
