--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestoría Automotriz Santos</title>
-    <link rel="icon" href="assets/logo-removebg-preview.png" type="image/x-icon#">
+    <link rel="icon" href="assets/logo.png" type="image/x-icon#">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -16,7 +16,7 @@
 
     <header class="header">
         <nav class="menu">
-            <a href=""><img class="logo"  src="assets/logo-removebg-preview.png" alt="logo gestoría"></a>
+            <a href=""><img class="logo"  src="assets/logo.png" alt="logo gestoría"></a>
                 <div class="menuNavegacion">
                     <a class="menuLink" href="">Inicio</a>
                     <a class="menuLink" href="">Nosotros</a>
@@ -94,7 +94,7 @@
               <section class="infoDescuento">
                   <div class="contenidoInfoDescuento">  
                     <div class="gifBoton">
-                      <img src="assets/gif2.gif" class="gifPrueba">
+                      <img src="assets/gif.gif" class="gifPrueba">
                       <a><button class="botonWhats">
                         <img src="assets/whatsAppIcono.png" alt="WhatsApp" class="iconWhats">
                         <span>Escríbenos por chat</span>
@@ -110,7 +110,7 @@
               </section>
 
               <section class="sobreEmpresaLp">
-                <img src="assets/pruebaSobreEmpresa.jpg" class="imagenTrabajando">
+                <img src="assets/sobreEmpresa.jpg" class="imagenTrabajando">
                 <div class="contenidoSobreEmpresaLp">
                   <hr class="divisionSobreEmpresa">
                   <h2 class="tituloSobreEmpresa">Santos Gestoría</h2>
@@ -154,9 +154,61 @@
                   </ul>
                 </div>
               </section>
+         <footer class="footer">
+                <div class="contenidoFooter">
+
+                  <div class="informacionFooter">
+                    <img class="logoFooter" src="assets/logo.png">
+                    <section class="informacionContenido">
+
+                      <div class="descripcionFooter">
+                        <span class="categoriaFooter"> <img src="assets/pinDrop.svg" class="iconoFooter"> <p class="textoFooter">Ubicación</p></span>
+                        <p class="textoDescripcionFooter">
+                          C. San Isidro #382A<br>
+                          Col. El Paraíso<br>  
+                          Zapopan, Jal. <br>
+                          C.P. 45157 <br>
+                        </p>
+                      </div>
+
+                      <div class="descripcionFooter">
+                        
+                        <span class="categoriaFooter">  <img src="assets/phone.svg" class="iconoFooter"><p class="textoFooter">Teléfono</p></span>
+                        <p class="textoDescripcionFooter">
+                          (+52) 33 51 19 57 60
+                        </p>
+                      </div>
+
+                      <div class="descripcionFooter">
+                        <span class="categoriaFooter">  <img src="assets/calendarClock.svg" class="iconoFooter"><p class="textoFooter">Horario </p></span>
+
+                        <p class="textoDescripcionFooter">
+                          Lunes a Viernes: <br>
+                          10:00 - 14:00 <br>
+                          16:00 - 19:00
+                        </p>
+                      </div>
+
+                      </section>
+
+                    <div class="redes">
+                        <h2 class="textoRedes">Síguenos en:</h2>
+
+                        <div>
+                          <img src="assets/facebookIcon.svg" class="rssIcon" alt="Facebook logo">
+                          <img src="assets/instagramIcon.svg" class="rssIcon" alt="Instagram logo">
+                        </div>
+                    </div>
+                  </div>
+                  <iframe class="ubicacionMapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.596121229228!2d-103.3797142!3d20.7266189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428af3b07af556f%3A0x283e5acf37ac9722!2sSantos%20Gestoria%20Automotriz!5e0!3m2!1ses!2smx!4v1743642046136!5m2!1ses!2smx" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="copyrightField">
+                  <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | Aviso de Privacidad | Usted está sujeto a la Política de Privacidad y los Términos del Servicio de Google.</p>
+                </div>
+          </footer>
             
     </main>
-    <footer></footer>
+
     <script src="app.js" defer></script>
 </body>
 </html>
