--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <header class="header">
         <nav class="menu">
-            <a href=""><img class="logo"  src="assets/logo.png" alt="logo gestoría"></a>
+            <a href="index.html"><img class="logo"  src="assets/logo.png" alt="logo gestoría"></a>
                 <div class="menuNavegacion">
-                    <a class="menuLink" href="">Inicio</a>
-                    <a class="menuLink" href="">Nosotros</a>
+                    <a class="menuLink" href="index.html">Inicio</a>
+                    <a class="menuLink" href="nosotros.html">Nosotros</a>
                     <div class=listaServicios>
-                        <a class="menuLink" href="">Servicios</a>
+                        <a class="menuLink" href="servicios.html">Servicios</a>
                         <ul class="menuLinkServiciosDropdown">
                             <li><a href="" class="listaServiciosMenu">Cambio de propietario</a></li>
                             <li><a href="" class="listaServiciosMenu">Dotación de placas</a></li>
@@ -30,10 +30,11 @@
                             <li><a href="" class="listaServiciosMenu">Descuentos en infracciones</a></li>
                         </ul>
                 </div>
-                <a class="menuLink" href="">Contacto</a>
+                <a class="menuLink" href="contacto.html">Contacto</a>
             </div>
             </nav>
     </header>
+    <div class="header-spacer"></div>
     <main>
         <div class="heroContainer">
             <div class="heroInfo">
@@ -72,7 +73,7 @@
                       xlink:href="#gentle-wave"
                       x="48"
                       y="0"
-                      fill="rgba(255,255,255,0.7"
+                      fill="rgba(255,255,255,0.7")
                     />
                     <use
                       xlink:href="#gentle-wave"
@@ -121,7 +122,7 @@
                     <p class="infoTextoSobreEmpresa"><strong>Porque con Santos Gestoría, ¡Todo es posible!</strong></p>
                     </div>
                   </blockquote>
-                 <a href=""><button class="botonLeerMas"><span>Leer más</span></button></a>
+                 <a href="nosotros.html"><button class="botonLeerMas"><span>Leer más</span></button></a>
                 </div>
               </section>
 
