--- a/nosotros.html
+++ b/nosotros.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="assets/logo.png" type="image/x-icon#">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="nosotros.css">
+    <link rel="stylesheet" href="styles/nosotros.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   </head>
 <body>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="nosotrosBoxTres">
-            <a href="nosotros.html"><button class="botonLeerMas" id="botonContactanos"><span>CONTÁCTANOS</span></button></a>
+            <a href="contacto.html"><button class="botonLeerMas" id="botonContactanos" ><span>CONTÁCTANOS</span></button></a>
         </div>
     <footer class="footer">
         <div class="contenidoFooter">
