refactoriza visuales añade servicios individuales

--- a/index.html
+++ b/index.html
@@ -126,22 +126,22 @@
                 </div>
                 <div class="serviciosContenedor">
                   <ul class="serviciosLista">
-                    <li class="servicios" >
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/descuentos.jpg)">
                       <h2 class="textoServiciosLista">Descuentos en infracciones</h2>
                     </li>
-                    <li class="servicios">
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/cambioPropietario.jpg)">
                       <h2 class="textoServiciosLista">Cambio de propietario</h2>
                     </li>
-                    <li class="servicios">
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/validaciones.jpg)">
                       <h2 class="textoServiciosLista">Validaciones</h2>
                     </li>
-                    <li class="servicios">
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/bajaTotal.jpg)">
                       <h2 class="textoServiciosLista">Bajas totales</h2>
                     </li>
-                    <li class="servicios">
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/placas.jpg)">
                       <h2 class="textoServiciosLista">Dotación de placas</h2>
                     </li>
-                    <li class="servicios">
+                    <a href="servicios/descuentosInfracciones.html"> <li class="servicios" style="background-image: url(assets/licencia.jpg)">
                       <h2 class="textoServiciosLista">Licencias</h2>
                     </li>
                   </ul>
