--- a/servicios.html
+++ b/servicios.html
@@ -44,51 +44,51 @@
             <section class="serviciosListaCompleta">
                 <div class="serviciosContenedor">
                     <ul class="serviciosListaContainer">
-                     <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion">
+                     <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/descuentos.jpg)">
                         <h2 class="textoServiciosLista">Descuentos en infracciones</h2>
                       </li></a>
-                      <li class="serviciosSeccion">
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/cambioPropietario.jpg)">
+                        <h2 class="textoServiciosLista">Cambio de propietario</h2>
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/placas.jpg)">
+                        <h2 class="textoServiciosLista">Dotación de placas</h2>
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/validaciones.jpg)">
+                        <h2 class="textoServiciosLista">Validaciones</h2>
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/bajaTotal.jpg)">
+                        <h2 class="textoServiciosLista">Bajas totales</h2>
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/licencia.jpg)">
+                        <h2 class="textoServiciosLista">Permiso vehicular</h2>
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion" >
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
+                      </li></a>
+                      <a href="servicios/descuentosInfracciones.html"> <li class="serviciosSeccion" style="background-image: url(assets/atencion.png)">
                         <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
-                        <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
-                        <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
-                        <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
-                        <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
-                      <li class="serviciosSeccion">
-                        <h2 class="textoServiciosLista">Blabla</h2>
-                      </li>
+                      </li></a>
                     </ul>
                   </div>
             </section>
