--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
                         <ul class="listaInformacionEmpresa">
                             <li class="informacionElemento"> <span class="listaSeparador"></span> <img src="assets/mapContacto.png" class="iconoLista"> <span class="textoLista">C. San Isidro #382A, Col. El Paraíso, C.P. 45157, Zapopan, Jal.</span></li>
                             <li class="informacionElemento"><span class="listaSeparador"></span> <img src="assets/phoneContacto.png" class="iconoLista"> <span class="textoLista">(+52) 33 51 19 57 60</span></li>
-                            <li class="informacionElemento"> <span class="listaSeparador"></span><img src="assets/emailContacto.png" class="iconoLista"> <span class="textoLista">https://gestoria-santos-web.vercel.app/</span></li>
+                            <li class="informacionElemento"> <span class="listaSeparador"></span><img src="assets/emailContacto.png" class="iconoLista"> <span class="textoLista">santosgestoria2015@icloud.com</span></li>
                             <li class="informacionElemento"> <span class="listaSeparador"></span><img src="assets/calendarContacto.png" class="iconoLista"> <span class="textoLista">
                                 Lunes a Viernes: <br>
                                 10:00 - 14:00 <br>
