agrega informacion faltante - mejora organizacion visual

--- a/servicios/cambioPropietario.html
+++ b/servicios/cambioPropietario.html
@@ -38,7 +38,7 @@
     <div class="header-spacer"></div>
     <main>
       <section class="SeccionInformacionServicio">
-        <img src="../assets/cambioPropietarioServicios.jpg" class="imagenServicios">
+        <img src="../assets/cambioPropietarioServicios.jpg" class="imagenServicios" id="imagenServiciosCambioProp">
         <div class="informacionServicio">
           <hr class="separadorServicios">
           <h1 class="tituloInformacionServicio">SERVICIOS</h1>
@@ -58,6 +58,28 @@
                 <li class="listaSeparador" id="requisitoListaSub">TELEFONIA MOVIL NO ES VÁLIDA.</li>
             </ul></li>
             <li class="listaSeparador" id="requisitoLista">Constancia de situación fiscal (SAT) vigente, no mayor a 3 meses.</li>
+            <li class="listaSeparador" id="incisoLista">Vehículos nacionales con placas del estado de Jalisco:
+              <ul class="listaSubpuntos">
+                <li class="listaSeparador" id="requisitoListaSub">Secuencia de facturas completa con su última en original ó, en su defecto, factura de origen original.</li>
+                <li class="listaSeparador" id="requisitoListaSub">Recibo de pago de refrendo del presente año ó tarjeta de circulación vigente.</li></ul>
+              </li>
+              <li class="listaSeparador" id="incisoLista">Vehículos americanos con placas del estado de Jalisco:
+                <ul class="listaSubpuntos">
+                  <li class="listaSeparador" id="requisitoListaSub">Titulo original.</li>
+                  <li class="listaSeparador" id="requisitoListaSub">Pedimento original (todas las hojas que contenga su pedimento)</li>
+                  <li class="listaSeparador" id="requisitoListaSub">Factura de importadora (en caso de contar con ella).</li>
+                  <li class="listaSeparador" id="requisitoListaSub">Recibo de pago de refrendo del presente año o tarjeta de circulación vigente.</li></ul>
+                </li>
+                <li class="listaSeparador" id="incisoLista">Vehículos con decreto del estado de Jalisco:
+                  <ul class="listaSubpuntos">
+                    <li class="listaSeparador" id="requisitoListaSub">Titulo original.</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Hoja de decreto original.</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Formato de pago SAT.</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Ticket de pago del impuesto SAT.</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Manifiesto.</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Hoja azul/morado del Registro Público Vehicular (REPUVE).</li>
+                    <li class="listaSeparador" id="requisitoListaSub">Recibo de pago de refrendo del presente año ó tarjeta de circulación vigente.</li></ul>
+                  </li>
           </ul>
         </div>
       </section>
