--- a/servicios/dotacionPlacas.html
+++ b/servicios/dotacionPlacas.html
@@ -58,8 +58,10 @@
                 <li class="listaSeparador" id="requisitoListaSub">TELEFONIA MOVIL NO ES VÁLIDA.</li>
             </ul></li>
             <li class="listaSeparador" id="requisitoLista">Constancia de situación fiscal (SAT) vigente, no mayor a 3 meses.</li>
-            <li class="listaSeparador" id="requisitoLista">Copia de factura.
-            <ul class="listaSubpuntos"> <li class="listaSeparador" id="requisitoListaSub">En caso de que el vehículo esté en financiamiento, presentar la carta factura original vigente, firmada y sellada, con una antigüedad no mayor a 30 días.</li></ul></li>
+            <li class="listaSeparador" id="incisoLista">Vehículos nuevos del año en curso, facturados en Jalisco ó en otro Estado:
+            <ul class="listaSubpuntos"> 
+              <li class="listaSeparador" id="requisitoListaSub">Copia de factura.</li>
+              <li class="listaSeparador" id="requisitoListaSub">En caso de que el vehículo esté en financiamiento, presentar la carta factura original vigente, firmada y sellada, con una antigüedad no mayor a 30 días.</li></ul></li>
           </ul>
         </div>
       </section>
