--- a/servicios/licenciaC1D1.html
+++ b/servicios/licenciaC1D1.html
@@ -60,7 +60,7 @@
             <li class="listaSeparador" id="requisitoLista">CURP impresa.</li>
             <li class="listaSeparador" id="requisitoLista">Conocer tipo de sangre.</li>
             <li class="listaSeparador" id="requisitoLista">Antidoping.</li>
-            <li class="listaSeparador" id="requisitoLista">Contar con un mínimo de antigüedad con la licencia de automovilista o chofer.</li>
+            <li class="listaSeparador" id="requisitoLista">Contar con un mínimo de 2 años de antigüedad con licencia de automovilista o chofer.</li>
           </ul>
         </div>
       </section>
