arregla texto de copyright

--- a/servicios/validaciones.html
+++ b/servicios/validaciones.html
@@ -207,7 +207,7 @@
         <iframe class="ubicacionMapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3731.596121229228!2d-103.3797142!3d20.7266189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428af3b07af556f%3A0x283e5acf37ac9722!2sSantos%20Gestoria%20Automotriz!5e0!3m2!1ses!2smx!4v1743642046136!5m2!1ses!2smx" width="450" height="380" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="copyrightField">
-        <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | Aviso de Privacidad | Usted está sujeto a la Política de Privacidad y los Términos del Servicio de Google.</p>
+        <p class="textoCopyright"> <strong>Copyright</strong> © 2025 Santos Gestoría | <a href="../avisoPrivacidad.html" class="linkCopyright">Aviso de Privacidad</a> | Usted está sujeto a la <a href="https://policies.google.com/privacy" class="linkCopyright">Política de Privacidad</a> y los <a href="https://policies.google.com/terms" class="linkCopyright">Términos del Servicio de Google</a>.</p>      </div>
       </div>
 </footer>
 
